# reachy-email-notifier

./: .env.example  .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  HF_README.md  HUGGINGFACE_PUBLISH.md  LICENSE  QUICKSTART.md  README.md  index.html  publish_to_hf.sh  pyproject.toml  requirements.txt  run_notifier.py  setup.py  style.css
reachy_email_notifier/: __init__.py  app.py  config.py  gmail_checker.py  main.py  reachy_controller.py
